data/derived/comb/progs/unify/prog4929.ml.out
Characters 50-62:
  mulByDigit h*i;;
  ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b
       but an expression was expected of type int
